--- a/uthinx/app/index.html
+++ b/uthinx/app/index.html
@@ -36,7 +36,7 @@
 
         <fb:login-button scope="public_profile,email,user_friends" onlogin="checkLoginState();"></fb:login-button>
         -->
-        <div>
+        <div class="access-btn-holder">
             <button id="facebookSignin" type="button" class="btn btn-primary btn-lg btn-block">FaceBook Login</button>
             <button id="anonymousSignin" type="button" class="btn btn-default btn-lg btn-block">Anonymous</button>
         </div>
